--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,13 @@ body{
   font-size: 16px;
   font-family: 'Raleway';
   color:#002B4D;
+  page-break-before: always;
 }
 
 .container{
   margin: auto;
   padding: 5%;
-  width:  80%;
+  width:  75%;
   min-height: 500px;
   height: auto;
   background:#C7E7FF
@@ -27,7 +28,33 @@ h1,h2,strong{
   border-radius: 10px solid rgb(15, 10, 40);
   padding: 3%;
   margin: auto;
+
 }
 strong{
   display: list-item;
+}
+
+#options{
+  margin: 5% 20%;
+  width: 56%;
+  height: 50px;
+  background: rgba(10, 10, 10, 0.64);
+  padding: 2%;
+  
+
+}
+.btn{
+  margin-left: 20px;
+  padding: 10px 20px;
+  width: 100px;
+  background: rgb(213, 223, 227);
+  color:rgb(16, 109, 218);
+  font-family: "Poller One";
+  font-size: 20px;
+
+}
+span{
+  color:white;
+  font-weight: bold;
+
 }
